--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -336,6 +336,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "91220c4f",
+   "metadata": {},
+   "source": [
+    "# Blocked CNN :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad58ba85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BlockedCNN(nn.Module):\n",
+    "    def __init__(self,device,N):\n",
+    "        super(BlockedCNN, self).__init__()\n",
+    "        self.N=N\n",
+    "        tmp=np.arange(N**2).reshape([N,N])\n",
+    "        tmp[1::2,:]=tmp[1::2,::-1]\n",
+    "        plt.imshow(tmp)\n",
+    "        plt.show()\n",
+    "        tmp2 = np.array([[tmp<=i for i in range(N**2-1)]])\n",
+    "\n",
+    "        self.mul=torch.tensor(tmp2).to(device).unsqueeze(2)\n",
+    "        self.add=torch.tensor(tmp2-1).to(device).unsqueeze(2)\n",
+    "        \n",
+    "        print(self.add.shape)\n",
+    "        \n",
+    "        self.net = nn.Sequential(\n",
+    "                nn.Conv2d(1,8,N//4,padding='same',padding_mode ='circular'),\n",
+    "                nn.ReLU(True),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.Conv2d(8,16,N//4,padding='same',padding_mode ='circular'),\n",
+    "                nn.ReLU(True),\n",
+    "                nn.MaxPool2d(2),\n",
+    "                nn.Flatten(),\n",
+    "                #Insize is 256, outsize is 10\n",
+    "                nn.Linear(N**2,256),\n",
+    "                nn.ReLU(True),\n",
+    "                nn.Linear(256,1),\n",
+    "                nn.Sigmoid(),\n",
+    "            )\n",
+    "        self.to(device)\n",
+    "    def forward(self, input):\n",
+    "        blocked=input.unsqueeze(1)*self.mul+self.add\n",
+    "        a,b,c,d,e=blocked.shape\n",
+    "        netin = blocked.reshape([a*b,c,d,e])\n",
+    "        netout = self.net(netin)\n",
+    "        ab,c2 = netout.shape\n",
+    "        return netout.reshape([a,b,c2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "401b6fb1",
    "metadata": {},
    "source": [
@@ -462,7 +516,7 @@
    "source": [
     "\n",
     "\n",
-    "typedict={'2d':LSTM2dCell(1,128,N,device),'':RNN()}\n",
+    "typedict={'CNN':BlockedCNN(device,N),'2d':LSTM2dCell(1,128,N,device),'':RNN()}\n",
     "\n",
     "net = typedict[modeltype]\n",
     "with torch.no_grad():\n",
@@ -551,7 +605,7 @@
     "        decompress1D[(bsize,N//2),(1,N//4)](traindata[bsize*idx:bsize*(idx+1)],batch)\n",
     "        #starting N**2-1 are inputs\n",
     "        if modeltype=='CNN':\n",
-    "            decompress2D[(bsize,N//2),(1,N//4)](traindata[0:bsize],data)\n",
+    "            decompress2D[(bsize,N//2),(1,N//4)](traindata[bsize*idx:bsize*(idx+1)],data)\n",
     "        else:\n",
     "            data=batch[:,:-1,:]\n",
     "        #ending N**2-1 are predictions\n",
