Added comments to ednn and rnn notebooks

--- a/EDNN.ipynb
+++ b/EDNN.ipynb
@@ -144,10 +144,19 @@
    "outputs": [],
    "source": [
     "class CEDNN(nn.Module):\n",
+    "    \"\"\" EDNN model with some extra freedom with the convolutional layers\n",
+    "    \"\"\"\n",
     "    def __init__(self,f=[2,2],c=[1,1],channel=[1,16,32],device=device):\n",
+    "                \"\"\"Parameters:\n",
+    "            f (int array) - Focuses: This gives stride length for each CNN layer\n",
+    "            c (int array) -  Contexts: This gives padding size for each our CNN layer\n",
+    "                Note: For the ednn to work, we set kernel_size = f+2c\n",
+    "            device (torch device) - Device to cast tensors to??\n",
+    "        \"\"\"\n",
     "        super(CEDNN, self).__init__()\n",
     "        layers=[]\n",
     "        for i in range(len(f)):\n",
+    "            # make a sequence of layers to throw in nn.Sequential\n",
     "            layers+=[nn.Conv2d(channel[i],  channel[i+1],(f[i]+2*c[i]),stride=f[i],padding=c[i],padding_mode ='circular')]\n",
     "            layers+=[nn.ReLU(True)]\n",
     "        \n",
@@ -292,14 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b562e0c",
-   "metadata": {},
-   "source": [
-    "# Importing traindata and generating true energies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d7cb57af",
    "metadata": {},
    "source": [
@@ -418,14 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "066f8b25",
    "metadata": {},
    "outputs": [],
    "source": [
     "@cuda.jit\n",
     "def IsingEnergy(grids,E):\n",
-    "    \"\"\"Compute Energy of 2D ising lattice (J=1 h=0)\"\"\"\n",
+    "    \"\"\"Compute Energy of 2D ising lattice (J=1 h=0)\n",
+    "    Parameters:\n",
+    "        grids (3D int array) - Array of 2D lattice states\n",
+    "        E (1D aray)          - Array to store energies, should initally be zero since it's changed in place\n",
+    "    \"\"\"\n",
     "    z,i,j=cuda.grid(3)\n",
     "    sz,sx,sy=grids.shape\n",
     "    s1=grids[z][i][j]*2-1\n",
@@ -434,7 +439,11 @@
     "    cuda.atomic.add(E,z,-s1*s2-s1*s3)\n",
     "\n",
     "def trueEnergies(grids,N):\n",
-    "    \"\"\"Compute the true energies of a set of data-compressed ising lattices\"\"\"\n",
+    "    \"\"\"Compute the true energies of a set of data-compressed ising lattices\n",
+    "    Parameters:\n",
+    "    grids (2D array) - Array of compressed ising states\n",
+    "    N     (int)      - Dimension of the Lattice\n",
+    "    \"\"\"\n",
     "    testbatch0=torch.zeros([grids.shape[0],1,N,N]).to(device)\n",
     "    decompress2D[(grids.shape[0],N//2),(1,N//4)](grids,testbatch0)\n",
     "    testbatch=testbatch0.squeeze(1)\n",
@@ -500,6 +509,14 @@
     "        ax0.plot(trueE,trueE,'k--')\n",
     "        ax1.plot(trueEB,relEB+OFF,'.',color=c+[0.1],label=name)\n",
     "        ax1.plot(trueEB,trueEB,'k--')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22111174",
+   "metadata": {},
+   "source": [
+    "# Test Plots"
    ]
   },
   {
