renamed networks to rnn

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -1506,12 +1506,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea61b1cf",
+   "cell_type": "markdown",
+   "id": "a6ee41a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Generating Training data for the EDNN"
+   ]
   },
   {
    "cell_type": "code",
