Changed comments in compress1D

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -1466,13 +1466,11 @@
    "source": [
     "@cuda.jit\n",
     "def compress1D(states,out,startidx):\n",
-    "    \"\"\"Similar to decompress 2D but instead of being an inverse to compress it squishes the 2D\n",
-    "    array output into a 1D array (which is now in a snake pattern)\n",
+    "    \"\"\"Similar to compress 2D but it takes a snake pattern and puts it into a uint8 array\n",
     "    if states has shape [N,X,1] then out should have shape [M,Z/8]\n",
     "    and the blocks/threads should have shape [N,Z/8]\n",
     "    Here Z=X*Y where each state has shape [X,Y] on a 2D grid\n",
     "    \n",
-    "    Note: This is slightly changed to work with the correct tensor shape\n",
     "    \"\"\"\n",
     "    #n is which grid ur on, i is which set of 8 numbers you're on\n",
     "    n,i=cuda.grid(2)\n",
@@ -1507,7 +1505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ee41a9",
+   "id": "935a8f81",
    "metadata": {},
    "source": [
     "# Generating Training data for the EDNN"
